# Adafruit_CircuitPython_BME680

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  README.rst  adafruit_bme680.py  conf.py  contributors.md  pyproject.toml  ruff.toml  setup.py
.github/workflows/: build.yml  release.yml
LICENSES/: BSD-3-Clause.txt
docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt
examples/: bme680_simpletest.py  bme680_spi.py
