# SPDX-FileCopyrightText: 2022 Alec Delaney for Adafruit Industries
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "adafruit-circuitpython-bme680"
description = "CircuitPython driver for BME680 sensor over I2C"
readme = "README.rst"
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "bme680",
    "hardware",
    "temperature",
    "pressure",
    "humidity",
    "gas",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Adafruit-Blinka",
    "adafruit-circuitpython-busdevice ~= 5.1",
]
dynamic = ["version"]

[tool.setuptools]
py-modules = ["adafruit_bme680"]

[tool.setuptools_scm]
